--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,20 +2,34 @@
 
 .header-container {
   display: flex;
+  background-color: White;
   width: 100%;
   justify-content: space-between;
-  border: 1px solid Gray;
+  border-bottom: 1px solid Black;
   position: fixed;
   top: 0;
   z-index: 1;
+  font-size: 17px;
+  font-weight: bold;
   }
 
 .logo {
-  border: 1px solid Gray;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 160px;
+  margin-left: 15px;
+  /* border: 1px solid Gray; */
+  color: MediumAquamarine;
 }
 
 .navbar {
-  border: 1px solid Gray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 200px;
+  margin-right: 30px;
+  /* border: 1px solid Gray; */
 }
 
 /* Main Content Section */
@@ -23,40 +37,89 @@
 .content-container {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  border: 1px solid Gray;
+  width: 95%;
+  margin: auto;
+  /* border: 1px solid Gray; */
   margin-top: 80px;
 }
 
 .column-left {
   display: flex;
-  flex-flow: wrap column;
+  flex-flow: wrap row;
   justify-content: space-between;
-  border: 1px solid Gray;
-  width: 630px;
+  /* border: 1px solid Gray; */
+  flex: 1 1 630px;
+  margin-right: 15px;
 }
 
 .column-center {
   display: flex;
   flex-flow: wrap column;
-  justify-content: space-between;
-  border: 1px solid Gray;
-  width: 300px;
+  justify-content: flex-start;
+  /* border: 1px solid Gray; */
+  flex: 1 1 300px;
+  margin-right: 15px;
 }
 
 .column-right {
   display: flex;
   flex-flow: wrap column;
-  justify-content: center;
-  border: 1px solid Gray;
-  width: 240px;
+  justify-content: flex-start;
+  /* border: 1px solid Gray; */
+  flex: 1 1 240px;
 }
 
 /* Bylines */
 
 .byline {
   font-family: Verdana, sans-serif;
-  border: 1px solid Gray;
+  /* border: 1px solid Gray; */
   font-size: 17px;
   color: Black;
+}
+
+.byline h1 {
+  font-weight: bold;
+  font-size: 30px;
+  color: White;
+}
+
+.byline h2 {
+  font-weight: bold;
+  font-size: 22px;
+}
+
+#party {
+  background-image: url(./../images/party.png);
+  background-size: cover;
+  height: 400px;
+}
+
+#party h1 {
+  font-size: 40px;
+
+}
+#earth {
+  background-image: url(./../images/autumn.png);
+  width: 300px;
+  height: 300px;
+}
+
+#camera {
+  background-image: url(./../images/camera.png);
+  width: 300px;
+  height: 300px;
+}
+
+#cats {
+  background-image: url(./../images/cat.png);
+  height: 300px;
+}
+
+#orca {
+  width: 310px;
+}
+
+#burger {
+  width: 310px;
 }
