--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,11 @@
+html {
+  font-family: Verdana, sans-serif;
+}
+
+p {
+  font-size: 12px;
+}
+
 /* Header Section */
 
 .header-container {
@@ -17,7 +25,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 160px;
+  width: 180px;
   margin-left: 15px;
   /* border: 1px solid Gray; */
   color: MediumAquamarine;
@@ -27,7 +35,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 200px;
+  width: 300px;
   margin-right: 30px;
   /* border: 1px solid Gray; */
 }
@@ -41,6 +49,7 @@
   margin: auto;
   /* border: 1px solid Gray; */
   margin-top: 80px;
+  margin-bottom: 40px;
 }
 
 .column-left {
@@ -73,7 +82,6 @@
 /* Bylines */
 
 .byline {
-  font-family: Verdana, sans-serif;
   /* border: 1px solid Gray; */
   font-size: 17px;
   color: Black;
@@ -104,17 +112,20 @@
   background-image: url(./../images/autumn.png);
   width: 300px;
   height: 300px;
+  text-align: center;
 }
 
 #camera {
   background-image: url(./../images/camera.png);
   width: 300px;
   height: 300px;
+  text-align: center;
 }
 
 #cats {
   background-image: url(./../images/cat.png);
   height: 300px;
+  text-align: center;
 }
 
 #orca {
@@ -148,4 +159,33 @@
   padding-bottom: 10px;
   color: DimGray;
   border-bottom: 1px solid Black;
+}
+
+/* Footer Section */
+
+.footer {
+  display:flex;
+  flex-flow: wrap column;
+  justify-content: center;
+  align-items: center;
+  background-color: MediumAquamarine;
+  height: 300px;
+}
+
+#logo {
+  font-family: Georgia, serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: White;
+  padding-right: 10px;
+  border-right: 2px solid White;
+}
+
+.footer span {
+  font-size: 12px;
+  margin: 20px;
+}
+
+.footer-copy {
+  padding: 10px;
 }
